@@ -137,7 +137,7 @@ sub formation {
 
    $ntags == 0 and return []; # No calls to add were made
 
-   if ($ntags == 1) {           # One call to add was made
+   if ($ntags == 1) {         # One call to add was made
       return [ { colour  => $self->hot_colour || pop @{ $self->colour_pallet },
                  count   => $self->_tags->[ 0 ]->{count},
                  percent => 100,
@@ -400,7 +400,7 @@ Peter Flanigan, C<< <Support at RoxSoft.co.uk> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2008-2010 Peter Flanigan. All rights reserved
+Copyright (c) 2008-2012 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
